--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -1,29 +1,31 @@
 extends layout
 
+include _includes/sharedHTMLFunctions
+//- mixin outputRating(rating)
+//-    - for (let i= 1; i< rating; i++)
+//-         i.fas.fa-star
+//-    - for (let i = rating; i < 5; i++)
+//-         i.far.fa-star
 block content
   .row.banner
     .col-12
-      h1 Loc8r
-        small &nbsp;Find places to work with wifi near you!
+      h1=pageHeader.title
+        small &nbsp;#{pageHeader.starpline}
 
   .row
     .col-12.col-md-8
+    each location in locations
       .card
         .card-block
           h4
-            a(href='/location') Starcups
+            a(href='/location')=location.name
             small &nbsp;
-              i.fas.fa-star
-              i.fas.fa-star
-              i.fas.fa-star
-              i.far.fa-star
-              i.far.fa-star
-            span.badge.badge-pill.badge-default.float-right 100m
-          p.address 125 High Street, Reading RG6 1PS
+          +outputRating(location.rating)
+            span.badge.badge-pill.badge-default.float-right=location.distance
+          p.address=location.address
           .facilities
-            span.badge.badge-warning Hot drinks
-            span.badge.badge-warning Food
-            span.badge.badge-warning Premium Wifi
+             each facility in location.facilities
+              span.badge.badge-warning=facility
 
     .col-12.col-md-4
       p.lead Looking for wifi and a seat? Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you're looking for.
